// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Form/Button alignment 1`] = `
.emotion-12 > * {
  margin-top: 10px;
}

.emotion-12 > *:nth-child(0) {
  margin-top: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-8:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: right;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

<div
  class="emotion-12 emotion-13"
>
  <div
    class="emotion-2 emotion-3"
  >
    <button
      class="emotion-0 emotion-1"
    >
      click this button
    </button>
  </div>
  <div
    class="emotion-2 emotion-3"
  >
    <button
      class="emotion-4 emotion-1"
    >
      click this button
    </button>
  </div>
  <div
    class="emotion-2 emotion-3"
  >
    <button
      class="emotion-8 emotion-1"
    >
      click this button
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Button sizes 1`] = `
.emotion-12 > * {
  margin-top: 10px;
}

.emotion-12 > *:nth-child(0) {
  margin-top: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  display: inline;
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-8 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-8:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

<div
  class="emotion-12 emotion-13"
>
  <div
    class="emotion-2 emotion-3"
  >
    <button
      class="emotion-0 emotion-1"
    >
      click this button
    </button>
  </div>
  <div
    class="emotion-2 emotion-3"
  >
    <button
      class="emotion-4 emotion-1"
    >
      click this button
    </button>
  </div>
  <div
    class="emotion-2 emotion-3"
  >
    <button
      class="emotion-8 emotion-1"
    >
      click this button
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Button validations 1`] = `
.emotion-16 > * {
  margin-top: 10px;
}

.emotion-16 > *:nth-child(0) {
  margin-top: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-12:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #d53535;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: orange;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-8 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #09833a;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-8:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

<div
  class="emotion-16 emotion-17"
>
  <div
    class="emotion-2 emotion-3"
  >
    <button
      class="emotion-0 emotion-1"
    >
      click this button
    </button>
  </div>
  <div
    class="emotion-2 emotion-3"
  >
    <button
      class="emotion-4 emotion-1"
    >
      click this button
    </button>
  </div>
  <div
    class="emotion-2 emotion-3"
  >
    <button
      class="emotion-8 emotion-1"
    >
      click this button
    </button>
  </div>
  <div
    class="emotion-2 emotion-3"
  >
    <button
      class="emotion-12 emotion-1"
    >
      click this button
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Button with knobs 1`] = `
.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  display: inline;
  text-align: left;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  min-height: 32px;
  box-sizing: border-box;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

<button
  class="emotion-0 emotion-1"
>
  💌  love letter to storybook team
</button>
`;

exports[`Storyshots Components|Form/Select sizes 1`] = `
.emotion-12 > * {
  margin-top: 10px;
}

.emotion-12 > *:nth-child(0) {
  margin-top: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  display: inline;
  text-align: left;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-8 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-8:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

<div
  class="emotion-12 emotion-13"
>
  <div
    class="emotion-2 emotion-3"
  >
    <select
      class="emotion-0 emotion-1"
    >
      <option
        value="val1"
      >
        Value 1
      </option>
      <option
        selected=""
        value="val2"
      >
        Value 2
      </option>
      <option
        value="val3"
      >
        Value 3
      </option>
    </select>
  </div>
  <div
    class="emotion-2 emotion-3"
  >
    <select
      class="emotion-4 emotion-1"
    >
      <option
        value="val1"
      >
        Value 1
      </option>
      <option
        selected=""
        value="val2"
      >
        Value 2
      </option>
      <option
        value="val3"
      >
        Value 3
      </option>
    </select>
  </div>
  <div
    class="emotion-2 emotion-3"
  >
    <select
      class="emotion-8 emotion-1"
    >
      <option
        value="val1"
      >
        Value 1
      </option>
      <option
        selected=""
        value="val2"
      >
        Value 2
      </option>
      <option
        value="val3"
      >
        Value 3
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Select validations 1`] = `
.emotion-8 > * {
  margin-top: 10px;
}

.emotion-8 > *:nth-child(0) {
  margin-top: 0;
}

.emotion-6 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-6:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #d53535;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-2 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: orange;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-2:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #09833a;
  height: 32px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-right: 20px;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

<div
  class="emotion-8 emotion-9"
>
  <select
    class="emotion-0 emotion-1"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="emotion-2 emotion-1"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="emotion-4 emotion-1"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="emotion-6 emotion-1"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
</div>
`;

exports[`Storyshots Components|Form/Textarea alignment 1`] = `
.emotion-12 > * {
  margin-top: 10px;
}

.emotion-12 > *:nth-child(0) {
  margin-top: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-8:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: right;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: center;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

<div
  class="emotion-12 emotion-13"
>
  <div
    class="emotion-2 emotion-3"
  >
    <textarea
      align="end"
      class="emotion-0 emotion-1"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="emotion-2 emotion-3"
  >
    <textarea
      align="center"
      class="emotion-4 emotion-1"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="emotion-2 emotion-3"
  >
    <textarea
      align="start"
      class="emotion-8 emotion-1"
      style="height:0"
    >
      text
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Textarea sizes 1`] = `
.emotion-12 > * {
  margin-top: 10px;
}

.emotion-12 > *:nth-child(0) {
  margin-top: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-8:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  display: inline;
  text-align: left;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: left;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

<div
  class="emotion-12 emotion-13"
>
  <div
    class="emotion-2 emotion-3"
  >
    <textarea
      class="emotion-0 emotion-1"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="emotion-2 emotion-3"
  >
    <textarea
      class="emotion-4 emotion-1"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="emotion-2 emotion-3"
  >
    <textarea
      class="emotion-8 emotion-1"
      style="height:0"
    >
      text
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Textarea validations 1`] = `
.emotion-16 > * {
  margin-top: 10px;
}

.emotion-16 > *:nth-child(0) {
  margin-top: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-12:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #d53535;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-4 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: orange;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-4:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

.emotion-8 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  border-bottom-color: #09833a;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-8:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

<div
  class="emotion-16 emotion-17"
>
  <div
    class="emotion-2 emotion-3"
  >
    <textarea
      class="emotion-0 emotion-1"
      style="height:0"
      valid="error"
    >
      text
    </textarea>
  </div>
  <div
    class="emotion-2 emotion-3"
  >
    <textarea
      class="emotion-4 emotion-1"
      style="height:0"
      valid="warn"
    >
      text
    </textarea>
  </div>
  <div
    class="emotion-2 emotion-3"
  >
    <textarea
      class="emotion-8 emotion-1"
      style="height:0"
      valid="valid"
    >
      text
    </textarea>
  </div>
  <div
    class="emotion-2 emotion-3"
  >
    <textarea
      class="emotion-12 emotion-1"
      style="height:0"
    >
      text
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Textarea with knobs (controlled) 1`] = `
.emotion-0 {
  padding: 0 10px;
  color: #444;
  background: rgba(0,0,0,0.1);
  border-radius: 4px;
  -webkit-transition: border-bottom-color .3s linear;
  transition: border-bottom-color .3s linear;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  box-sizing: border-box;
  position: relative;
  width: 100%;
  text-align: left;
  min-height: 32px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: visible;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #9fdaff;
}

<textarea
  class="emotion-0 emotion-1"
  style="height:0"
>
  OMG, multiple lines!

That is amazing
</textarea>
`;
